src/test/deca/context/invalid/unknown_type.deca
// Description:
//    Essaie de definir une variable avec un identifier inconnu
//
// Resultats:
//    Erreur contextuelle
//    Ligne 12 : Type is not defined
//
// Historique:
//    cree le 06/01/2025

{   
   zoro nami;

}